--- a/real/docker-compose.yml
+++ b/real/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     privileged: true
     network_mode: "host"
     environment:
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+      - ROS_HOSTNAME=master
     ports:
        - "11311:11311"
     command: roscore
@@ -27,8 +27,8 @@ services:
     restart: always
     environment: 
       - LD_LIBRARY_PATH=:/opt/vc/lib
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+      - ROS_MASTER_URI=http://master:11311
+      - ROS_HOSTNAME=master
     volumes:
       - /opt/vc:/opt/vc
     privileged: true
@@ -55,8 +55,8 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
     environment: 
       - DISPLAY=${DISPLAY}
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+      - ROS_MASTER_URI=http://master:11311
+      - ROS_HOSTNAME=master
     command: roslaunch tortoisebot_slam tortoisebot_slam.launch
   
   server-bringup:
@@ -70,6 +70,6 @@ services:
     privileged: true
     network_mode: "host"
     environment: 
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+      - ROS_MASTER_URI=http://master:11311
+      - ROS_HOSTNAME=master
     command: roslaunch tortoisebot_firmware server_bringup.launch
