--- a/real/docker-compose.yml
+++ b/real/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     build:
       context: .
       dockerfile: tortoisebot-ros1-real-base.Dockerfile
-    container_name: master
     hostname: master
     restart: always
     privileged: true
     network_mode: "host"
     environment:
-      - ROS_HOSTNAME=master
+      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+      - ROS_HOSTNAME=$ROS_HOSTNAME
     ports:
        - "11311:11311"
     command: roscore
@@ -27,8 +27,8 @@ services:
     restart: always
     environment: 
       - LD_LIBRARY_PATH=:/opt/vc/lib
-      - ROS_MASTER_URI=http://master:11311
-      - ROS_HOSTNAME=master
+      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+      - ROS_HOSTNAME=$ROS_HOSTNAME
     volumes:
       - /opt/vc:/opt/vc
     privileged: true
@@ -46,7 +46,7 @@ services:
       context: .
       dockerfile: tortoisebot-ros1-slam-real.Dockerfile
     depends_on:
-      - master
+      - bringup
     restart: always
     privileged: true
     network_mode: "host"
@@ -55,8 +55,8 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
     environment: 
       - DISPLAY=${DISPLAY}
-      - ROS_MASTER_URI=http://master:11311
-      - ROS_HOSTNAME=master
+      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+      - ROS_HOSTNAME=$ROS_HOSTNAME
     command: roslaunch tortoisebot_slam tortoisebot_slam.launch
   
   server-bringup:
@@ -65,11 +65,11 @@ services:
       context: .
       dockerfile: tortoisebot-ros1-slam-real.Dockerfile
     depends_on:
-      - master
+      - bringup
     restart: always
     privileged: true
     network_mode: "host"
     environment: 
-      - ROS_MASTER_URI=http://master:11311
-      - ROS_HOSTNAME=master
+      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+      - ROS_HOSTNAME=$ROS_HOSTNAME
     command: roslaunch tortoisebot_firmware server_bringup.launch
