--- a/real/docker-compose.yml
+++ b/real/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     restart: always
     privileged: true
     network_mode: "host"
-    environment:
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+#    environment:
+#      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+#      - ROS_HOSTNAME=$ROS_HOSTNAME
     ports:
        - "11311:11311"
     command: bash -c "export ROS_HOSTNAME=192.168.1.16 && roscore"
@@ -27,8 +27,8 @@ services:
     restart: always
     environment: 
       - LD_LIBRARY_PATH=:/opt/vc/lib
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+#      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+#      - ROS_HOSTNAME=$ROS_HOSTNAME
     volumes:
       - /opt/vc:/opt/vc
     privileged: true
@@ -55,8 +55,8 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
     environment: 
       - DISPLAY=${DISPLAY}
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+#      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+#      - ROS_HOSTNAME=$ROS_HOSTNAME
     command: bash -c "export ROS_HOSTNAME=192.168.1.16 && roslaunch tortoisebot_slam tortoisebot_slam.launch"
   
   server-bringup:
@@ -69,7 +69,7 @@ services:
     restart: always
     privileged: true
     network_mode: "host"
-    environment: 
-      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
-      - ROS_HOSTNAME=$ROS_HOSTNAME
+#    environment: 
+#      - ROS_MASTER_URI=http://$ROS_HOSTNAME:11311
+#      - ROS_HOSTNAME=$ROS_HOSTNAME
     command: bash -c "export ROS_HOSTNAME=192.168.1.16 && roslaunch tortoisebot_firmware server_bringup.launch"
